# django-sage-model-generator

./: README.md  model_generator.py  pyproject.toml
core/: handlers.py  settings.py
django_sage_model_generator/core/: parser.py  utils.py
django_sage_model_generator/helper/: dataclasses.py  enums.py  filter.py
django_sage_model_generator/root/: bundleparticipation.py  projectparticipation.py
django_sage_model_generator/root/auth/: group.py  user.py  usergroup.py
django_sage_model_generator/root/gamification/: badge.py  certificate.py  usercertificate.py  userprofile.py
django_sage_model_generator/root/saas/: offer.py  plan.py  planoption.py  planoptionincluded.py  subscription.py
django_sage_model_generator/root/warehouse/: product.py  productmedia.py
django_sage_model_generator/templates/: model_base.jinja2
root/: bankportal.py  bundleinteraction.py  practiceinteraction.py  practiceparticipation.py  useraddress.py
root/awareness/: notification.py  usernotification.py
root/gamification/: userbadge.py
root/helpers/: choices.py
root/saas/: subscriptionplaninvoice.py  upgradeplanoffer.py
root/warehouse/: answer.py  question.py  questionhelp.py
templates/: enum_base.jinja2
