[tool.poetry]
name = "django-sage-model-generator"
version = "0.1.0"
description = ""
authors = ["radin qahremani <radinceorc77@gmail.com>", "sepehr akbarzadeh <sa.goldeneagle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.4"
pydbml = "^1.0.9"
django = "^5.0.3"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
